# SFML_Asteroid

./: CMakeLists.txt  README.md
res/: config.ini
src/: main.cpp
src/data/: color.h  rect.h  vector2.h
src/ecs/: filter.h  pools.h  systems.h  types.h  world.h
src/game/: game.cpp  game.h
src/game/components/: asteroid_spawner_tag.h  asteroid_tag.h  collider.h  collision_hit.h  components.h  cooldown.h  drawable.h  fragment_tag.h  input.h  lifespan.h  mass.h  player_tag.h  projectile_tag.h  score.h  shape.h  speed.h  text.h  transform.h  velocity.h
src/game/config/: config.cpp  config.h
src/game/systems/: collide_system.h  cooldown_tick_system.h  destroy_asteroid_system.h  destroy_player_system.h  destroy_projectile_system.h  dev_gui_system.h  draw_system.h  input_system.h  lifespan_fade_system.h  lifespan_tick_system.h  move_player_system.h  move_system.h  rotate_system.h  score_system.h  shoot_player_system.h  spawn_asteroid_system.h  spawn_player_system.h  spin_player_system.h  update_shape_transform_system.h
src/ini/: ini_config.cpp  ini_config.h
src/utils/: property.h  utils.h
